2001-12-05  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/ibm1129.h: Remove duplicate mappings.
	* iconvdata/ibm937.c: Handle overflow errors.  Handle new tables.
	* iconvdata/ibm937.h: Reorganize table to safe a lot of space.
	Patch by Masahide Washizawa <WASHI@jp.ibm.com>.

	* timezone/zic.c: Fix handling of turnaround times.
	Patch by Arthur David Olson <olsona@dc37a.nci.nih.gov>.

2001-12-02  Moshe Olshansky  <OLSHANSK@il.ibm.com>

	* sysdeps/ieee754/dbl-64/e_remainder.c (__ieee754_remainder): Fix
	overflow problem.

2001-12-05  Ulrich Drepper  <drepper@redhat.com>

	* posix/regex.c: For use outside glibc defined bounded pointer
	macros here.  Patch by Jim Meyering <jim@meyering.net>.

	* iconvdata/Makefile (modules): Add TCVN5712-1.
	* iconvdata/TESTS: Add TCVN5712-1.
	* iconvdata/gconv-modules: Likewise.
	* iconvdata/tcvn5712-1.c: New file.
	* iconvdata/testdata/TCVN-5712: New file.
	* iconvdata/testdata/TCVN-5712..UTF8: New file.

2001-12-04  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/cp1258.c: Optimize conversion from UCS4.

2001-12-02  Roland McGrath  <roland@frob.com>

	* mach/Makefile, mach/Machrules: Move comments out of \ continuations.

	* hurd/hurd.h (__hurd_fail): Add `break;' to silence new gcc-3 warning.
	Reported by Jeff Bailey <jbailey@nisa.net>.

	* hurd/hurd.h (_hurd_umask): Remove volatile qualifier from decl.
	Reported by Jeff Bailey <jbailey@nisa.net>.

	* mach/Makefile ($(objpfx)mach-syscalls.mk): Pass $(CFLAGS) to $(CC).
	* mach/Machrules ($(objpfx)%.udeps static pattern rule): Likewise.
	Reported by Jeff Bailey <jbailey@nisa.net>.

2001-12-01  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/configure.in (libc_cv_gcc_unwind_find_fde): Add
	missing backslash in test arguments.
	* sysdeps/mach/hurd/configure: Regenerated.

2001-11-26  Roland McGrath  <roland@frob.com>

	* hurd/hurdinit.c (_hurd_ports_use): Check if _hurd_ports is null.
	Reported by John Tobey <jtobey@john-edwin-tobey.org>.
